--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    min-height: 1000vh;
 }
 
 p {
@@ -14,6 +15,60 @@ p {
     font-weight: 617;
     font-style: normal;
   }
+
+section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, #0a2a43, transparent);
+    z-index: 10000;
+}
+
+section:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #0a2a43;
+    z-index: 10000;
+    mix-blend-mode: color;
+}
+
+section img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+}
+
+#text {
+    position: relative;
+    color: #fff;
+    font-size: 10em;
+    z-index: 1;
+    font-family: sans-serif;
+}
+
+#road {
+    z-index: 2;
+}
 
 .header-container {
     display: flex;
@@ -91,8 +146,24 @@ h1 {
 }
 
 .header-text p {
-    font-size: 25px;
+    font-size: 15px;
     font-family: "Montserrat";
     width: 500px;
     margin-bottom: 25px;
+}
+
+.container-first {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 150px;
+}
+
+/*AYAW OG GAMIT OG PERCENT SA WIDTH OG GUSTO NIMO MA BALHIN ANG IMAGE*/
+.container-first img {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    margin-left: 50px;
 }
